--- a/apps/smallapp/movement-pedometer/index.html
+++ b/apps/smallapp/movement-pedometer/index.html
@@ -38,9 +38,9 @@ function getRandom(min, max) {
 实时计步 <span id=jbstatus style="color:red">已禁用</span><span id=agreedstatus><br>
 i 由于本计步器特性,需要获取经纬度,所以<a href='javascript:;' onclick=
 'navigator.geolocation.getCurrentPosition(new Function("agreedgeo()"),new Function("agreedstatus.innerHTML=\"
-<br />已拒绝\""))'>点击授权</a></span>
+<br />已拒绝定位服务\""))'>点击授权</a></span>
 </div>
-
+<!--分鸽线-->
 <script>
 (function(){
 toolow.hidden=1;
