--- a/apps/smallapp/movement-pedometer/index.html
+++ b/apps/smallapp/movement-pedometer/index.html
@@ -30,7 +30,7 @@ function getRandom(min, max) {
 }
 </script>
 <style>.blue{color:blue};.red{color:red}
-#historystep{background-color:#fff;position:fixed;left:0;top:0;z-index:3;}
+#historystep{background-color:#fff;position:fixed;left:0;top:0;z-index:3;width:100%;height:100%;}
 #messagearea{background-color:#fff;position:fixed;left:0;top:0;z-index:7;color:#0a0;}</style>
 </head>
 <body>
@@ -40,7 +40,7 @@ function getRandom(min, max) {
 <h1>计步器</h1>
 <big>今日步数 <span style="color:blue;" id=tdnum>0</span></big><br>
 实时计步 <span id=jbstatus style="color:red">已禁用</span><span id=agreedstatus><br>
-i 由于本计步器特性,需要获取经纬度,所以<a href='javascript:;' onclick=
+i 由于本计步器特性,需要获取经纬度,所以<a id=getcrt href='javascript:;' onclick=
 'navigator.geolocation.getCurrentPosition(new Function("agreedgeo()"),new Function("agreedstatus.innerHTML=\"<br />已拒绝定位或无法获取位置信息\""))'>点击授权</a></span>
 <div style='border:1px solid #ccc;'>更多功能<br>当前经度: <span id=onlelon class=blue>未获取</span><br>当前纬度: <span id=onlelat class=blue>未获取</span><br>
 功能 | <span style="color:#ccc"><a onclick="historystep.hidden=0;">查看历史步数</a> | <a onclick="ioautodw()">打开/关闭自动计步</a></span></div>
@@ -59,8 +59,8 @@ var bs=JSON.parse(localStorage.memoryNumberOfStepsWithJson);window.stepnumber=bs
 let a=new Object();a.nums=new Object();
 localStorage.memoryNumberOfStepsWithJson=JSON.stringify(a);
 var bs=JSON.parse(localStorage.memoryNumberOfStepsWithJson);window.stepnumber=bs;
-}
-autoupload();tdnum.innerHTML=bs.todayNum;
+};autoupload();tdnum.innerHTML=bs.todayNum;
+if(bs.autostart) getcrt.onclick()
 })()
 function uploadnum(){localStorage.memoryNumberOfStepsWithJson=JSON.stringify(stepnumber)};
 function agreedgeo(){jbstatus.innerHTML="已启用";jbstatus.style.color="blue";startJiBu(1);agreedstatus.hidden=1};
@@ -77,8 +77,7 @@ function autoupload(stopcode){
 bs.nums[tdd] ? false : bs.nums[tdd]=new Object() ;
 bs.todayNum=(bs.nums[tdd].lastNum ? bs.nums[tdd].lastNum : 0);
 document.title=(bs.todayNum ? `计步器 今日步数${bs.todayNum}` : '计步器');
-setTimeout(autoupload,750);}
-showmsg=function(msg){messagearea.innerHTML=msg;setTimeout('messagearea.innerHTML=""',1500);}
+setTimeout(autoupload,750);};showmsg=function(msg){messagearea.innerHTML=msg;setTimeout('messagearea.innerHTML=""',1500);};
 function ioautodw(){stepnumber.autostart=!stepnumber.autostart;uploadnum();showmsg('已'+(stepnumber.autostart?'打开':'关闭'))}
 </script>
 </body>
