--- a/apps/smallapp/movement-pedometer/index.html
+++ b/apps/smallapp/movement-pedometer/index.html
@@ -45,10 +45,10 @@ i 由于本计步器特性,需要获取经纬度,所以<a id=getcrt href='javasc
 'navigator.geolocation.getCurrentPosition(new Function("agreedgeo()"),new Function("agreedstatus.innerHTML=\"<br />已拒绝定位或无法获取位置信息\""))'>点击授权</a></span>
 <div style='border:1px solid #ccc;'>更多功能<br>当前经度: <span id=onlelon class=blue>未获取</span><br>当前纬度: <span id=onlelat class=blue>未获取</span><br>
 功能 |<span> 
-<a class=nle href="start historystep.exe" onclick="event.preventDefault();historystep.hidden=0;">查看历史步数</a> | 
+<a class=nle href="start historystep.exe" onclick="event.preventDefault();historystep.style.top='0';location.href='#historystep'">查看历史步数</a> | 
 <a class=nle href="io autocalcbushu toggle -y" onclick="event.preventDefault();ioautodw()">打开/关闭自动计步</a></span></div>
-</div><div id=historystep hidden>历史步数<span style="position:absolute;right:1px;" onclick="historystep.hidden=1">x</span><div id=historystepmemer style="border:1px solid #ccc;">
-日期 | 步数<br><a onclick="loadmorehistory(this)">加载更多...</a></div></div>
+</div><div id=historystep style="top:-100%;">历史步数<span style="position:absolute;right:1px;" onclick="historystep.style.top='-100%';location.href=location.href.replace('#historystep','')">x</span>
+<div style="border:1px solid #ccc;">日期 | 步数<br><span id=hstepmem></span><a onclick="loadmorehistory(this)">加载更多...</a></div></div>
 <!--分鸽线-->
 <script>
 (function(){
@@ -81,6 +81,8 @@ bs.todayNum=(bs.nums[tdd].lastNum ? bs.nums[tdd].lastNum : 0);
 document.title=(bs.todayNum ? `计步器 今日步数${bs.todayNum}` : '计步器');
 setTimeout(autoupload,750);};showmsg=function(msg){messagearea.innerHTML=msg;setTimeout('messagearea.innerHTML=""',1500);};
 function ioautodw(){stepnumber.autostart=!stepnumber.autostart;uploadnum();showmsg('已'+(stepnumber.autostart?'打开':'关闭'))}
+function loadmorehistory(el){var bs=stepnumber,nums=bs.nums,arr=[],res="";
+for(let i in nums){res+=(i+' | '+nums[i]+'<br />')};hstepmem.innerHTML+=res;}
 </script>
 </body>
 </html>
