--- a/apps/smallapp/more/story-never-finished/index.html
+++ b/apps/smallapp/more/story-never-finished/index.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8" />
-<title>故事</title>   
- <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>404 File not found</title>   
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://shc7432.github.io/public/something/stools.js"></script>
 <!--script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -31,6 +31,26 @@ function getRandom(min, max) {
 </script>
 </head>
 <body>
-
+<h1 id=err404>404 File not found</h1>
+<script>
+try{
+let _=location.href.split('#');
+window.sets=JSON.parse(atob(_[l_.length-1]));
+err404.hidden=1;
+document.title=sets.title;
+document.body.innerHTML+=(sets.start?sets.start:sets.str);
+function populate() {
+  while(true) {
+    // 文档末端
+    let windowRelativeBottom = document.documentElement.getBoundingClientRect().bottom;
+    // 如果用户将页面滚动了足够远（文档末端距窗口底部 <100px）
+    if (windowRelativeBottom < document.documentElement.clientHeight + 100) {
+      // 让我们添加更多数据
+      document.body.insertAdjacentHTML("beforeend", sets.str);
+    }
+  }
+};window.addEventListense('scroll',populate);populate();
+}catch(e){1}
+</script>
 </body>
 </html>
