--- a/apps/smallapp/call-forwarding/index.html
+++ b/apps/smallapp/call-forwarding/index.html
@@ -12,7 +12,7 @@
 <form id=tbe>
 电话号码:<input id=telep type=tel value=+86><br>
 <button type=submit onclick="set=!!1">设置</button> <button type=submit onclick="set=!!0">清除</button> 
-<button type="button" onclick="open('tel:*#21#');open('tel://*#21#')"></button>
+<button type="button" onclick="open('tel:*#21#');open('tel://*#21#')">查询</button>
 </form>
 </div>
 <script id=mainScript>
