--- a/apps/smallapp/tofull/BlackScreenWindow.html
+++ b/apps/smallapp/tofull/BlackScreenWindow.html
@@ -5,22 +5,6 @@
 <title>全屏窗口</title>   
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://shc7432.github.io/public/something/stools.js"></script>
-<!--script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script-->
-<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-<!--link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"-->
-<script src="https://shc0743.github.io/crypto-js/core.js"></script>
-<script src="https://shc0743.github.io/crypto-js/enc-base64.js"></script>
-<script src="https://shc0743.github.io/crypto-js/enc-hex.js"></script>
-<script src="https://shc0743.github.io/crypto-js/enc-utf8.js"></script>
-<script src="https://shc0743.github.io/crypto-js/enc-utf16.js"></script>
-<script src="https://shc0743.github.io/crypto-js/crypto-js.js"></script>
-<script src="https://shc0743.github.io/crypto-js/aes.js"></script>
-<script src="https://shc0743.github.io/crypto-js/md5.js"></script>
-<script src="https://shc0743.github.io/crypto-js/sha1.js"></script>
-<script src="https://shc0743.github.io/crypto-js/sha512.js"></script>
-<script src="https://pv.sohu.com/cityjson"></script>
 <script id=headScript>window.getip=window.getIP=function(){return returnCitySN.cip;}
 function getRandom(min, max){return Math.floor(Math.random() * (max - min + 1) ) + min;}
 function showMessage(msg,t){let a=document.getElementById('messageArea');a.innerHTML=msg;
@@ -59,6 +43,7 @@ function fullw(videoDom){
   }
 
 }
+window.onkeyup=function(){fullw(maina)}
 </script>
 </body>
 </html>
