--- a/apps/execution/sidetosd.html
+++ b/apps/execution/sidetosd.html
@@ -1,3 +1,7 @@
 <script>
-location.href="slidetoshutdown_install_v1.2.exe"
+  var a=document.createElement("A"); 
+  a.href="slidetoshutdown_install_v1.2.exe"
+  a.download="SlideToShutDown_Installer_Package_Time"+new Date().getTime()+"_v1.2_Execution_Setup.exe"
+  a.target="_self"
+  a.click()
 </script>
