--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -77,6 +77,7 @@ __temp2__=__temp2__.replace(/\|/igm,"^|");
 res+="echo "+__temp2__+" >> temp891562."+tppe.value+"\n"
 }
 res+="temp891562."+tppe.value+"\ndel /f /s /q temp891562."+tppe.value+"";
+  if(res.length<3000){
 setTimeout(function(){
 status01.innerHTML="马上就好..."
 setTimeout(function(){
@@ -88,8 +89,41 @@ whitescreen.hidden="-1010%";
 //unFullScreen();
 //window.style.cursor='auto';
 status01.innerHTML="请稍候..."
-},res.length>3000?1500:15)
-},res.length>3000?11451.114514:23.33)
+},15)
+},23.33)
+  } else {
+setTimeout(function(){
+status01.innerHTML="正在生成...0%"
+setTimeout(function(){
+status01.innerHTML="正在生成...20%"
+setTimeout(function(){
+status01.innerHTML="正在生成...25%"
+setTimeout(function(){
+status01.innerHTML="正在生成...50%"
+setTimeout(function(){
+status01.innerHTML="正在生成...80%"
+setTimeout(function(){
+status01.innerHTML="正在生成...99%"
+setTimeout(function(){
+status01.innerHTML="马上就好..."
+setTimeout(function(){
+resu.value=res;
+conv.style.cursor='pointer'
+conv.onmousedown=aa;
+setTimeout(checkenab,100);
+whitescreen.hidden="-1010%";
+//unFullScreen();
+//window.style.cursor='auto';
+status01.innerHTML="请稍候..."
+},1500)
+},1500)
+},2500)
+},700)
+},1000)
+},800)
+},1200)
+},1800)
+  }
 }
 })()
 </script>
