--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -16,7 +16,7 @@
 html或hta代码:<br>
 <textarea style="width:95%;height:500px;cursor:crosshair;" id=cont placeholder=请输入></textaREa><br>
 Code type: <select id=tppe><option value=err>Please select a option</option><option value=html>HTML</option><option value=hta>HTA</option></select><BR>
-<button id=conv style="width:100%;cursor:not-allowed">Transformation</button>  <br>
+<button id=conv style="width:100%;cursor:not-allowed">Convert</button>  <br>
 生成结果:<BR><TEXTAREA id=resu style="width:95%;height:500px;cursor:crosshair;" --readonly--></TexTArEa><Br>
 <button onclick="resu.value=''">Clear</button> <button onclick="window.close()">Exit</button>
 </div>
@@ -89,22 +89,22 @@ setTimeout(checkenab,100);
 whitescreen.hidden="-1010%";
 //unFullScreen();
 //window.style.cursor='auto';
-status01.innerHTML="请稍候..."
+status01.innerHTML="Wait..."
 },15)
 },23.33)
   } else {
 setTimeout(function(){
-status01.innerHTML="正在生成...0%"
+status01.innerHTML="Converting...0%"
 setTimeout(function(){
-status01.innerHTML="正在生成...20%"
+status01.innerHTML="Converting...20%"
 setTimeout(function(){
-status01.innerHTML="正在生成...25%"
+status01.innerHTML="Converting...25%"
 setTimeout(function(){
-status01.innerHTML="正在生成...50%"
+status01.innerHTML="Converting...50%"
 setTimeout(function(){
-status01.innerHTML="正在生成...80%"
+status01.innerHTML="Converting...80%"
 setTimeout(function(){
-status01.innerHTML="正在生成...99%"
+status01.innerHTML="Converting...99%"
 setTimeout(function(){
 status01.innerHTML="马上就好..."
 setTimeout(function(){
