--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -133,7 +133,7 @@ if(!a) return 1;
 cont.value=a;
 tppe.value=getUrlValue('type')||'html';
 aa({preventDefault:function(){return void 0}});
-},1.114514)
+},Math.floor(500.114514))
 </script>
 </span>
 </body>
