--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -26,6 +26,7 @@ Code type: <select id=tppe><option value=err>Please select a option</option><opt
 
 <script>
 (function(){
+  whitescreen.hidden=0;
 window.checkenab=function(){
 //whitescreen.style.height=screen.height+23.3+"px";
 if(cont.value==""||tppe.value=="err"){
