--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -68,7 +68,7 @@ __temp2__=__temp2__.replace(/\</igm,"^<");
 __temp2__=__temp2__.replace(/\>/igm,"^>");
 __temp2__=__temp2__.replace(/\*/igm,"^*");
 __temp2__=__temp2__.replace(/\\/igm,"^\\");
-//__temp2__=__temp2__.replace(/\:/igm,"^:");
+__temp2__=__temp2__.replace(/\"/igm,"^\"");
 __temp2__=__temp2__.replace(/\|/igm,"^|");
 res+="echo "+__temp2__+" >> temp891562."+tppe.value+"\n"
 }
