--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -3,8 +3,8 @@
 <html lang="zh"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>HTML/HTA转BAT</title>   
-<script src="./HTML_HTA转BAT_files/fullscreen.js.下载"></script>
-<script src="./HTML_HTA转BAT_files/getLinkInput.js.下载"></script>
+<script src="fullscreen.js"></script>
+<script src="shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color:#fff;"><span style="background-color:#fff;">
