--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -4,7 +4,7 @@
 
 <title>HTML/HTA转BAT</title>   
 <script src="fullscreen.js"></script>
-<script src="shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color:#fff;"><span style="background-color:#fff;">
