--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0058)https://shc7432.github.io/download/apps/smallapp/htmtobat/ -->
-<html lang="zh"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="zh"><head><meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 
 <title>HTML/HTA转BAT</title>   
 <script src="fullscreen.js"></script>
