--- a/apps/smallapp/htmtobat/index.html
+++ b/apps/smallapp/htmtobat/index.html
@@ -5,7 +5,7 @@
 <title>HTML/HTA转BAT</title>   
 <script src="fullscreen.js"></script>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-<link rel="stylesheet" type="text/css" href="/chromecsstable.css"></link>
+<!--link rel="stylesheet" type="text/css" href="/chromecsstable.css"></link-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color:#fff;"><span style="background-color:#fff;">
