--- a/htmlmodel/htmlmodel.html
+++ b/htmlmodel/htmlmodel.html
@@ -11,7 +11,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
         function getRandom(min, max) { return Math.floor(Math.random() * (max - min + 1)) + min; }
-        sTools.loadExternalJs();
+        sTools.loadDependJs();
     </script>
 </head>
 
