--- a/apps/smallapp/story-maker/make.html
+++ b/apps/smallapp/story-maker/make.html
@@ -66,7 +66,7 @@
                     return false;
                 }
                 r_r.value=url;
-                console.log(CreateDialog(result, true));
+                CreateDialog(result, true);
             }
             f_p.onclick = function () {
                 _preview = true;
